Added negative formulations

--- a/code_beta_omega_zeta.Rmd
+++ b/code_beta_omega_zeta.Rmd
@@ -28,8 +28,9 @@ library(psychonetrics)
 library(qgraph)
 library(scales)
 
-alpha <- .01 # auf .05 setzen, wenn beide Netzwerke sonst empty wären
-ID <- 4
+alpha <-
+  .01 # auf .05 setzen, wenn beide Netzwerke sonst empty wären
+ID <- 5
 
 
 # ... function to compute model per person
@@ -46,7 +47,7 @@ getPersonalizedModel <-
           beta = "full",
           omega_zeta = "full",
           beepvar = beepvar,
-          dayvar = dayvar, 
+          dayvar = dayvar,
           verbose = TRUE
           
         )  %>% runmodel %>% prune(alpha = alpha, recursive = F) %>% stepup(alpha = alpha)
@@ -127,7 +128,7 @@ model_personalized <- data %>%
   ) %>%
   mutate(Diff_Time = difftime(DateTime, Ref_Time,  units = "mins")) %>%
   mutate(Query_of_Day = ifelse(Diff_Time > 60, NA, Query_of_Day)) %>%
-   rename_at(vars(matches("-1-0")), ~ final_vars) %>%
+  rename_at(vars(matches("-1-0")), ~ final_vars) %>%
   mutate(across(matches("var_"), function(x)
     ifelse(is.na(Query_of_Day), NA, x))) %>%
   select(-c(Timestamp, Lead_Day, Ref_Time, Diff_Time)) %>%
@@ -182,8 +183,9 @@ fluctuation_plot <- data %>%
   pivot_longer(cols = most_variable_items$Erlebnis,
                names_to = "Erlebnis",
                values_to = "Wert") %>%
-  ggplot(., aes(x = time_ESM, y = Wert, color = Erlebnis)) + facet_wrap( ~
-                                                                           Erlebnis, ncol = 1) +  geom_line(size=1) +
+  ggplot(., aes(x = time_ESM, y = Wert, color = Erlebnis)) + facet_wrap(~
+                                                                          Erlebnis, ncol = 1) +  geom_line(size =
+                                                                                                             1) +
   geom_smooth(method = "loess", formula = y ~ x) +
   theme_classic() +
   xlab("\n Datum") +
@@ -194,14 +196,15 @@ fluctuation_plot <- data %>%
     axis.text = element_text(size = 14, colour = "black")
   ) +
   scale_color_viridis_d() +
-  scale_y_continuous(limits = c(-10,100), breaks = c(0,25,50,75,100)) +
+  scale_y_continuous(limits = c(-10, 100),
+                     breaks = c(0, 25, 50, 75, 100)) +
   scale_x_datetime(breaks =  date_breaks("2 days"), labels = date_format("%d.%m."))
 
 # contemporaneous network
 contemporaneous_network <-
   getmatrix(model_personalized, "omega_zeta")
 strongest_connection_contemp <-
-  label_vars[which(contemporaneous_network == max(contemporaneous_network),
+  label_vars[which(abs(contemporaneous_network) == max(abs(contemporaneous_network)),
                    arr.ind = TRUE)[, 1]]
 strongest_connection_contemp[1] <-
   paste0("'", strongest_connection_contemp[1], "'")
@@ -209,7 +212,7 @@ strongest_connection_contemp[2] <-
   paste0("'", strongest_connection_contemp[2], "'")
 
 contemp_nodes <-
-  which(contemporaneous_network == max(contemporaneous_network),
+  which(contemporaneous_network == max(abs(contemporaneous_network)),
         arr.ind = TRUE)[, 1]
 
 start_sentence <- c(
@@ -225,7 +228,7 @@ start_sentence <- c(
   "Je mehr Sie grübelten, "
 )
 
-end_sentence <-
+end_sentence_positive <-
   c(
     "desto trauriger fühlten Sie sich zur selben Zeit",
     "desto mehr hatten Sie zur selben Zeit das Gefühl, Dinge wahrzunehmen, die andere Menschen nicht wahrnehmen können",
@@ -239,20 +242,40 @@ end_sentence <-
     "desto mehr grübelten Sie"
   )
 
+
+end_sentence_negative <-
+  c(
+    "desto weniger traurig fühlten Sie sich zur selben Zeit",
+    "desto weniger hatten Sie zur selben Zeit das Gefühl, Dinge wahrzunehmen, die andere Menschen nicht wahrnehmen können",
+    "desto weniger Schwierigkeiten hatten Sie, sich zur selben Zeit zu konzentrieren",
+    "desto weniger kontaktfreudig waren Sie zur selben Zeit",
+    "desto weniger gestresst fühlten Sie sich zur selben Zeit",
+    "desto weniger zufrieden waren Sie mit sich zur selben Zeit",
+    "desto weniger ängstlich fühlten Sie sich zur selben Zeit",
+    "desto weniger schwer fiel es Ihnen, sich zu Dingen zu motivieren",
+    "desto weniger misstrauisch waren Sie gegenüber anderen Menschen",
+    "desto weniger grübelten Sie"
+  )
+
+
 formulation_contemp <-
-  paste0(start_sentence[contemp_nodes[1]], end_sentence[contemp_nodes[2]])
+  ifelse(
+    contemporaneous_network[contemporaneous_network >= max(abs(contemporaneous_network))][1] > 0,
+    paste0(start_sentence[contemp_nodes[1]], end_sentence_positive[contemp_nodes[2]]),
+    paste0(start_sentence[contemp_nodes[1]], end_sentence_negatice[contemp_nodes[2]])
+  )
 
 most_central_item <-
-  paste0("'", label_vars[centralityTable(contemporaneous_network) %>% filter(measure == "Strength") %>% arrange(-value) %>% select(node) %>% .[1,] %>% as.numeric], "'")
+  paste0("'", label_vars[centralityTable(contemporaneous_network) %>% filter(measure == "Strength") %>% arrange(-value) %>% select(node) %>% .[1, ] %>% as.numeric], "'")
 
 # temporal network
 temporal_network <- getmatrix(model_personalized, "PDC")
 temporal_network[is.nan(temporal_network)] <- 0
 temporal_network[is.infinite(temporal_network)] <- 0
 
-if (sum(temporal_network) > 0) {
+if (sum(abs(temporal_network)) > 0) {
   strongest_connection_temp <-
-    label_vars[which(temporal_network == max(temporal_network), arr.ind = TRUE)]
+    label_vars[which(abs(temporal_network) == max(abs(temporal_network)), arr.ind = TRUE)]
   strongest_connection_temp[1] <-
     paste0("'", strongest_connection_temp[1], "'")
   strongest_connection_temp[2] <-
@@ -266,9 +289,8 @@ if (sum(temporal_network) > 0) {
       strongest_connection_temp[2]
     )
   
-  temp_nodes <- which(temporal_network == max(temporal_network),
-                      arr.ind = TRUE)
-  
+  temp_nodes <-
+    which(abs(temporal_network) == max(abs(temporal_network)), arr.ind = TRUE)
   
   start_sentence <- c(
     "Je trauriger Sie sich fühlten, ",
@@ -283,7 +305,7 @@ if (sum(temporal_network) > 0) {
     "Je mehr Sie grübelten, "
   )
   
-  end_sentence <-
+  end_sentence_positive <-
     c(
       "desto trauriger fühlten Sie sich 3 Stunden später",
       "desto mehr hatten Sie 3 Stunden später das Gefühl, Dinge wahrzunehmen, die andere Menschen nicht wahrnehmen können",
@@ -293,12 +315,30 @@ if (sum(temporal_network) > 0) {
       "desto zufriedener waren Sie mit sich 3 Stunden später",
       "desto ängstlicher fühlten Sie sich 3 Stunden später",
       "desto schwieriger fiel es Ihnen 3 Stunden später, sich zu Dingen zu motivieren",
-       "desto misstrauischer waren Sie 3 Stunden später gegenüber anderen Menschen",
+      "desto misstrauischer waren Sie 3 Stunden später gegenüber anderen Menschen",
       "desto mehr grübelten Sie 3 Stunden später"
     )
   
+  end_sentence_positive <-
+    c(
+      "desto weniger traurig fühlten Sie sich 3 Stunden später",
+      "desto weniger hatten Sie 3 Stunden später das Gefühl, Dinge wahrzunehmen, die andere Menschen nicht wahrnehmen können",
+      "desto weniger Schwierigkeiten hatten Sie, sich 3 Stunden später zu konzentrieren",
+      "desto weniger kontaktfreudig waren Sie 3 Stunden später",
+      "desto weniger gestresst fühlten Sie sich 3 Stunden später",
+      "desto weniger zufrieden waren Sie mit sich 3 Stunden später",
+      "desto weniger ängstlich fühlten Sie sich 3 Stunden später",
+      "desto weniger schwierig fiel es Ihnen 3 Stunden später, sich zu Dingen zu motivieren",
+      "desto weniger misstrauisch waren Sie 3 Stunden später gegenüber anderen Menschen",
+      "desto weniger grübelten Sie 3 Stunden später"
+    )
+  
   formulation_temp <-
-    paste0(start_sentence[temp_nodes[1]], end_sentence[temp_nodes[2]], ".")
+    ifelse(
+      temporal_network[abs(temporal_network) >= max(abs(temporal_network))][1] > 0,
+      paste0(start_sentence[temp_nodes[1]], end_sentence_positive[temp_nodes[2]], "."),
+      paste0(start_sentence[temp_nodes[1]], end_sentence_negative[temp_nodes[2]], ".")
+    )
 } else {
   formulation_temp_strongest <-
     c(
